# ChangeLog for games-misc/gtklife
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/gtklife/ChangeLog,v 1.8 2005/06/05 05:33:57 mr_bones_ Exp $

*gtklife-4.2 (05 Jun 2005)

  05 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org> +gtklife-4.2.ebuild:
  version bump

  31 May 2005; Marcus D. Hanwell <marcus@gentoo.org> gtklife-4.1.ebuild:
  Stable on amd64.

*gtklife-4.1 (26 May 2005)

  26 May 2005; Michael Sterrett <mr_bones_@gentoo.org> -gtklife-2.2.ebuild,
  -gtklife-4.0.ebuild, +gtklife-4.1.ebuild:
  version bump; clean old versions

  17 Dec 2004; Tom Martin <slarti@gentoo.org> gtklife-4.0.ebuild:
  Marked ~amd64, resolves bug 74387.

*gtklife-4.0 (25 Aug 2004)

  25 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> +gtklife-4.0.ebuild:
  version bump (bug #61623)

  08 Jun 2004; David Holm <dholm@gentoo.org> gtklife-2.2.ebuild:
  Added to ~ppc.

*gtklife-2.2 (06 Jun 2004)

  06 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> gtklife-2.2.ebuild,
  metadata.xml:
  initial commit - ebuild submitted by Daniel Fullmer via bug #47649
