@@ -1,1 +1,3 @@
 MD5 1ec7bccafee624679fe1f418a41cfb15 gtklife-4.2.tar.gz 760008
+RMD160 f9c3fc60beb907505cdbb6a4c310e5c991c56db6 gtklife-4.2.tar.gz 760008
+SHA256 2940753a23ae2afd61bf4f6490127ce3a57aa847922af542a55799fb8880e3dd gtklife-4.2.tar.gz 760008
