@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/gtklife
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/gtklife/ChangeLog,v 1.8 2005/06/05 05:33:57 mr_bones_ Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/gtklife/ChangeLog,v 1.9 2006/09/02 07:47:25 mr_bones_ Exp $
+
+  02 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org> gtklife-4.2.ebuild:
+  avoid prestripped binaries (patch from Tristan Heaven via bug #137768)
 
 *gtklife-4.2 (05 Jun 2005)
 
